@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-19T01:48:50Z",
+  "timestamp" : "2022-05-19T08:24:33Z",
   "count_outdated" : 1842,
   "uniques_outdated" : 375,
-  "count" : 2117,
-  "uniques" : 407,
+  "count" : 2118,
+  "uniques" : 408,
   "clones" : [
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
