@@ -1,5 +1,5 @@
 {
-  "count": 275,
+  "count": 276,
   "uniques": 17,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
