@@ -1,3 +1,10 @@
+2022-05-19T08:24:33Z:
+* notice: last 14d: unq all: 17 276
+* notice: prev accum: outdated-unq outdated-all / unq all: 375 1842 / 407 2117
+* notice: next accum: outdated-unq outdated-all / unq all: 375 1842 / 408 2118
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-19]
+
 2022-05-19T01:48:50Z:
 * notice: last 14d: unq all: 17 275
 * notice: prev accum: outdated-unq outdated-all / unq all: 375 1842 / 407 2118
